# naruto

./: .ansible-lint  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ansible-test.yml  build-claude-code.yml
ansible/: inventory.yml  inventory_ci.yml  inventory_standalone.yml  setup-k8s.yml
ansible/roles/setup-k8s/meta/: main.yml
ansible/roles/setup-k8s/tasks/: main.yml
ansible/roles/setup_k8s/defaults/: main.yml
ansible/roles/setup_k8s/tasks/: main.yml
docker/coding_agents/claude_code/: Dockerfile  README.md  entrypoint.sh
docker/dev_container/claude_code/: Dockerfile
