[project]
name = "naruto"
version = "0.1.0"
description = "Networked Agent Replication Utility Tool Orchestrator"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "ansible>=10.7.0",
    "kubernetes>=28.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
]
