[project]
name = "naruto"
version = "0.1.0"
description = "Networked Agent Replication Utility Tool Orchestrator"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "ansible>=10.7.0",
    "kubernetes>=28.1.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ansible-lint>=25.6.1",
    "pre-commit>=4.2.0",
]
